feat: initial service implementation
- supports basic CRUD for users, channels and memberships
