# dto/openapi_types.gen.go
@@ -1,18 +1,27 @@
-// Package ports provides primitives to interact with the openapi HTTP API.
+// Package dto provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
-package ports
-
-const (
-	ApiKeyAuthScopes = "apiKeyAuth.Scopes"
-	BearerAuthScopes = "bearerAuth.Scopes"
-)
+package dto
 
 // Defines values for APIResponseFormatStatus.
 const (
 	Error   APIResponseFormatStatus = "error"
 	Failure APIResponseFormatStatus = "failure"
 	Success APIResponseFormatStatus = "success"
+)
+
+// Defines values for ChannelCategory.
+const (
+	ChannelCategoryCHANNEL ChannelCategory = "CHANNEL"
+	ChannelCategoryGROUP   ChannelCategory = "GROUP"
+	ChannelCategoryPEER    ChannelCategory = "PEER"
+)
+
+// Defines values for NewChannelCategory.
+const (
+	NewChannelCategoryCHANNEL NewChannelCategory = "CHANNEL"
+	NewChannelCategoryGROUP   NewChannelCategory = "GROUP"
+	NewChannelCategoryPEER    NewChannelCategory = "PEER"
 )
 
 // APIResponseFormat defines model for APIResponseFormat.
@@ -37,32 +46,63 @@ type APIResponseFormatStatus string
 
 // Channel defines model for Channel.
 type Channel struct {
-	Id *string `json:"id,omitempty"`
+	Category    ChannelCategory `json:"category"`
+	Description *string         `json:"description,omitempty"`
+	Id          string          `json:"id"`
+	Name        string          `json:"name"`
+}
+
+// ChannelCategory defines model for Channel.Category.
+type ChannelCategory string
+
+// Membership defines model for Membership.
+type Membership struct {
+	ChannelID *string `json:"channelID,omitempty"`
+	Id        string  `json:"id"`
+	UserID    *string `json:"userID,omitempty"`
 }
 
 // NewChannel defines model for NewChannel.
 type NewChannel struct {
-	Name *string `json:"name,omitempty"`
+	Category    NewChannelCategory `json:"category"`
+	Description *string            `json:"description,omitempty"`
+	Name        string             `json:"name"`
+}
+
+// NewChannelCategory defines model for NewChannel.Category.
+type NewChannelCategory string
+
+// NewMembership defines model for NewMembership.
+type NewMembership struct {
+	ChannelID *string `json:"channelID,omitempty"`
+	UserID    *string `json:"userID,omitempty"`
 }
 
 // NewUser defines model for NewUser.
 type NewUser struct {
-	Name *string `json:"name,omitempty"`
+	Name string `json:"name"`
 }
 
 // User defines model for User.
 type User struct {
-	Id *string `json:"id,omitempty"`
+	Id   string `json:"id"`
+	Name string `json:"name"`
 }
 
 // CreateChannelJSONBody defines parameters for CreateChannel.
 type CreateChannelJSONBody = NewChannel
+
+// CreateMembershipJSONBody defines parameters for CreateMembership.
+type CreateMembershipJSONBody = NewMembership
 
 // CreateUserJSONBody defines parameters for CreateUser.
 type CreateUserJSONBody = NewUser
 
 // CreateChannelJSONRequestBody defines body for CreateChannel for application/json ContentType.
 type CreateChannelJSONRequestBody = CreateChannelJSONBody
+
+// CreateMembershipJSONRequestBody defines body for CreateMembership for application/json ContentType.
+type CreateMembershipJSONRequestBody = CreateMembershipJSONBody
 
 // CreateUserJSONRequestBody defines body for CreateUser for application/json ContentType.
 type CreateUserJSONRequestBody = CreateUserJSONBody
